--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class ="box1">EMPLOYEE DASHBOARD</div>
         <div class ="box2">
             <img src="./100k-ai-faces-6 1.jpg" alt="john_pic">
-            <div style="font-size: 24px;">JOHN STARK </div>
+            <div class ="photo_name">JOHN STARK </div>
         </div>
         <div class ="box3">
             <div >Tasks Given To The Employee</div>
